# Tienkung_thermal

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: ct_scale_profiles.yaml  leg_index_mapping.yaml  thermal_predictor.yaml  ultra_thermal_lstm.yaml
docs/: dataset_leg_status_h5.md  plan.md  recording_operations.md  rosbag_export_view.md  task_memory.md  thermal_lstm_modeling.md  todo.md  training_ultra_lstm.md  ultra_thermal_lstm_implementation.md
scripts/: evaluate.py  inference.py  train.py  visualize_prediction.py
scripts/bags/: __init__.py  export_leg_status_dataset.py  extract_bag_topic_samples.py  rebuild_metadata.py
scripts/check/: __init__.py  p0_check.py  test_p0_check.py
tienkung_thermal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tienkung_thermal/bags/: __init__.py  bag_dir.py  ct_scale_config.py  mapping.py  pipeline.py  rosbags_types.py
tienkung_thermal/data/: dataset.py
tienkung_thermal/models/: thermal_lstm.py
tienkung_thermal/training/: trainer.py
